[gd_scene load_steps=5 format=3 uid="uid://dyg1q4cxppdey"]

[ext_resource type="Script" uid="uid://dk1ynvkwrugj4" path="res://scripts/ui/PlayerTestingUi.gd" id="1_aopwm"]
[ext_resource type="PackedScene" uid="uid://csvt6mnke156n" path="res://scenes/ui/TestingSlider.tscn" id="2_tu04i"]
[ext_resource type="Script" uid="uid://dgxsxhus4yac6" path="res://scripts/ui/TestingSlider.gd" id="3_mp2dh"]
[ext_resource type="Script" uid="uid://db1swkjxmss6u" path="res://scripts/ui/JumpCurve.gd" id="4_mp2dh"]

[node name="PlayerTestingUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aopwm")

[node name="JumpHeightSlider" parent="." instance=ExtResource("2_tu04i")]
layout_mode = 0
offset_left = -127.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = 71.0
script = ExtResource("3_mp2dh")
label = "jump height"
max_value = 128.0
step = 1.0

[node name="JumpTimeSlider" parent="." instance=ExtResource("2_tu04i")]
layout_mode = 0
offset_left = -126.0
offset_top = 70.0
offset_right = -14.0
offset_bottom = 128.0
script = ExtResource("3_mp2dh")
label = "jump time"
max_value = 1.0
step = 0.1

[node name="FallTimeSlider" parent="." instance=ExtResource("2_tu04i")]
layout_mode = 0
offset_left = -128.0
offset_top = 133.0
offset_right = -16.0
offset_bottom = 191.0
script = ExtResource("3_mp2dh")
label = "fall time"
max_value = 1.0
step = 0.1

[node name="JumpDistanceSlider" parent="." instance=ExtResource("2_tu04i")]
layout_mode = 0
offset_left = -129.0
offset_top = 198.0
offset_right = -17.0
offset_bottom = 256.0
script = ExtResource("3_mp2dh")
label = "jump distance"
max_value = 1024.0
step = 1.0

[node name="RunFactorSlider" parent="." instance=ExtResource("2_tu04i")]
layout_mode = 0
offset_left = -130.0
offset_top = 326.0
offset_right = -18.0
offset_bottom = 384.0
script = ExtResource("3_mp2dh")
label = "run factor"
max_value = 10.0
step = 0.1

[node name="JumpCurve" type="Node2D" parent="."]
visible = false
script = ExtResource("4_mp2dh")
